add favorite toys and activities of lion

--- a/new-project.html
+++ b/new-project.html
@@ -1,19 +1,29 @@
 <!DOCTYPE html>
 <html>
     <head>
-    <title>my favorite</title>
+    <title> favorite</title>
     </head>
     <body>
-     <h1> my favorite toys</h1>
-     <ol>
-         <li>Polly Pocket</li>
-         <li>Power Rangers</li>
-         <li>Star Wars Action Figures</li>
-         <li> Star Wars Action Figures</li>
-     </ol>
-     <h1>my favorite activities</h1>
+     <h1> favorite toys of lion </h1>
      <ul>
-         <li></li>
-     </ul>
+        <li><p> Lions are the kings of the animal kingdom. They are hunters. They are ferocious. 
+        They are… playful? Well, this lion is at least! Meet Cameron, a lion who lives at Big Cat Rescue, 
+          which is a feline sanctuary with headquarters in Tampa, Florida. Cameron is a very special, 
+        and very playful lion, who enjoys spending a good chunk of time with his toys.</p></li>
+        <li> <p>And his very favorite toy is a special yellow donut that he just can’t get enough of.
+          It’s perfect for chewing, tossing, and rolling around with, 
+          and Cameron so loved playing with his donut that he chewed a hole right through it.
+           But don’t worry, readers! All is not lost! 
+           You’ve got to watch this video to see how he reacts to his brand new toy. </p></li>
+         </ul>
+            <h2> Favorite activities of lion</h2>
+            <ol>
+               <li> <p>First things first — big cats are a group of animals that share some similar traits. 
+              The big cat group includes animals like tigers, leopards, and of course, lions. 
+              But lions are the only big cats that have a lot of bushy hair around their 
+              face and neck called a mane. It’s only the adult male lions, too. Female lions (also known as 
+              lionesses) don’t have manes.This makes it easy to tell the male lions from the female ones </p></li>
+               </li>
+            </ol>
     </body>
 </html>
